--- a/client/src/components/Post/Post.module.scss
+++ b/client/src/components/Post/Post.module.scss
@@ -7,6 +7,7 @@ $blue: #4361ee;
     overflow: hidden;
     margin-bottom: 15px;
     position: relative;
+    text-align: center;
 
     &:hover {
         border: 1px solid $blue;
