--- a/client/src/pages/Login/Login.module.scss
+++ b/client/src/pages/Login/Login.module.scss
@@ -3,6 +3,11 @@
     padding: 50px;
     border: 1px solid #dedede;
     margin: 50px auto;
+
+    @media (max-width: 586px) {
+        width: 280px;
+        padding: 50px 30px;
+    }
 }
 
 .field {
