--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -17,7 +17,7 @@
 }
 
 .logo {
-    background-color: black;
+    background-color: #4361ee;
     color: #fff;
     font-weight: 700;
     line-height: 35px;
@@ -32,7 +32,7 @@
     text-align: center;
 
     &:hover {
-        background-color: #9c27b0;
+        background-color: #38B2AC;
     }
 }
 
@@ -43,7 +43,7 @@
 
     button {
         &:hover {
-            background-color: #9c27b0;
+            background-color: #38B2AC;
             color: #ffffff;
         }
     }
