--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -44,6 +44,7 @@
     button {
         &:hover {
             background-color: #38B2AC;
+            border-color: #38B2AC;
             color: #ffffff;
         }
     }
